--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Lilian's Website</title>
 </head>
 <body>
+    <!-- Hero Section -->
+    <section id="hero">
+        <div class="hero container">
+            <div>
+                <h1>Hello,<span></span></h1>
+                <h1>My Name Is <span></span></h1>
+                <h1>Lilian <span></span></h1>
+                <a href="#" type="butten" class="cta">Protfolio</a>
+            </div>
+        </div>
+    </section>
+    <!-- End Hero Section -->
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+    <!-- Services Section -->
+    <section id="services">
+        <div class="services container">
+            <div class="service-top">
+                <h1 class="section-title">Serv<span>i</span>ces</h1>
+                <p>
+                    Hi, This is Lilian
+                </p>
+            </div>
+            <div class="service-bottom">
+            </div>
+
+        </div>
+    </section>
+
+    <!-- End Services Section -->
 
 </body>
 </html>
