--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- End Hero Section -->
 
     <!-- Services Section -->
-    <section id="services">
+    <!-- <section id="services">
         <div class="services container">
             <div class="service-top">
                 <h1 class="section-title">Serv<span>i</span>ces</h1>
@@ -34,7 +34,7 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
 
     <!-- End Services Section -->
 
